exo: Fix cursor size for multi-display ARC

When a low-DPI monitor is connected to a high-DPI device, the cursor in
ARC windows appears twice as large if:

  1) The primary display is the external display, unless the internal
     display uses native resolution and the window is on the internal
     display. This includes docked mode.

  2) The primary display is the internal display, the internal display
     uses native resolution, and the window is on the external display.

BUG=684672
BUG=642894
TEST=samus: Cursor size is correct in the above cases.

Review-Url: https://codereview.chromium.org/2645273005
Cr-Commit-Position: refs/heads/master@{#446192}

Former-commit-id: f79ede40658ecab4a6c72b6e51c456d68dab2ad0